tests/baselines/reference/internalAliasInitializedModuleInsideLocalModuleWithoutExportAccessError.errors.txt
internalAliasInitializedModuleInsideLocalModuleWithoutExportAccessError.ts(1,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internalAliasInitializedModuleInsideLocalModuleWithoutExportAccessError.ts(2,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internalAliasInitializedModuleInsideLocalModuleWithoutExportAccessError.ts(8,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internalAliasInitializedModuleInsideLocalModuleWithoutExportAccessError.ts(13,22): error TS2339: Property 'b' does not exist on type 'typeof c'.


==== internalAliasInitializedModuleInsideLocalModuleWithoutExportAccessError.ts (4 errors) ====
    export module a {
                  ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module b {
                      ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export class c {
            }
        }
    }
    
    export module c {
                  ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import b = a.b;
        export var x: b.c = new b.c();
    }
    
    export var d = new c.b.c();
                         ~
!!! error TS2339: Property 'b' does not exist on type 'typeof c'.